# light-wallpaper

./: CLAUDE.md  Cargo.toml  README.md  flake.nix
shader/: frag.spv  frag2.spv  frag3.spv  shader.frag  shader.vert  shader1.frag  shader2.frag
src/: main.rs  main1.rs
src/app/: app.rs  context.rs  mod.rs
src/context/: buffer.rs  command.rs  context.rs  descriptor.rs  device.rs  instance.rs  mipmap.rs  mod.rs  msaa.rs  pipeline.rs  rebuild.md  swapchain.rs  sync.rs  texture.rs  tool.rs  uniform.rs  vertex.rs
src/wayland/: mod.rs  wayland.rs  wlr_layer_shell.rs
